2007-04-02  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bvw_check_missing_plugins_error):
	  Make the missing-plugins stuff work in the case where we have
	  a subtitles streams but no video stream (presumably because we are
	  missing the appropriate video decoder). This should probably be
	  handled better in playbin itself, but for now we'll work around it.
	  (Closes: #418383)

2007-04-02  Bastien Nocera  <hadess@hadess.net>

	* src/totem-options.h:
	* src/totem.c:
	* src/totem.h: Remove extraneous includes

2007-04-02  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am:
	* src/totem-resources.c: (set_resource_limits), (time_monitor),
	(totem_resources_monitor_start), (totem_resources_monitor_stop):
	* src/totem-resources.h:
	* src/totem-video-indexer.c: (main):
	* src/totem-video-thumbnailer.c: (main): Move the resource
	monitoring, and the wall-clock checking thread to a separate file,
	add resource monitoring support to the video indexer

2007-04-02  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemBasicPlugin.cpp:
	* browser-plugin/totemComplexPlugin.cpp:
	* browser-plugin/totemGMPPlugin.cpp:
	* browser-plugin/totemMullYPlugin.cpp:
	* browser-plugin/totemNarrowSpacePlugin.cpp:
	* browser-plugin/totemPlugin.cpp:
	* browser-plugin/totemPlugin.h:
	* browser-plugin/totemPluginGlue.cpp: Remove the rejection
	of streams based on mime-type, too many false positives
	(Closes: #418387)

2007-04-01  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_get_stream_length): Return a cached
	stream length if we couldn't get the current one accurately

2007-03-31  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_get_current_frame): Take into account
	the original image ratio before scaling the captured frame,
	Fixes 4:3 aspect with a very wide resolution

2007-03-30  Bastien Nocera  <hadess@hadess.net>
